--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
     <title> Olá Mundo </title>
 </head>
 <body>
+<h1> Este um parágrafo</h1>
 </body>
 </html>
